# Volutariado_Lacrei

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
consultas/: models.py  serializers.py  views.py
consultas/migrations/: 0001_initial.py
consultas/teste/: test_consultas.py
profissionais/: models.py  views.py
profissionais/migrations/: 0001_initial.py
profissionais/teste/: test_profissionais.py
voluntariado/: asgi.py  permissoes.py  settings.py  urls.py  wsgi.py
